--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
       <h2></h2>
 
       <div class="row">
-        <div class="top left"></div>
+        <div class="top left diagonal-down"></div>
         <div class="top middle"></div>
-        <div class="top right"></div>
+        <div class="top right diagonal-up"></div>
       </div>
 
       <div class="row">
         <div class="center left"></div>
-        <div class="center middle"></div>
+        <div class="center middle diagonal-down diagonal-up"></div>
         <div class="center right"></div>
       </div>
 
       <div class="row">
-        <div class="bottom left"></div>
+        <div class="bottom left diagonal-up"></div>
         <div class="bottom middle"></div>
-        <div class="bottom right"></div>
+        <div class="bottom right diagonal-down"></div>
       </div>
     </div>
 
